<resources>
    <string name="app_name">Puzzels</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_g">G</string>
    <string name="button_h">H</string>
    <string name="button_i">I</string>
    <string name="button_j">J</string>
    <string name="button_k">K</string>
    <string name="button_l">L</string>
    <string name="button_m">M</string>
    <string name="button_n">N</string>
    <string name="button_o">O</string>
    <string name="button" />
</resources>